parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> query
Rule 1     query -> select_query
Rule 2     query -> insert_query
Rule 3     query -> update_query
Rule 4     query -> delete_query
Rule 5     select_query -> SELECT * FROM IDENTIFIER WHERE conditions
Rule 6     conditions -> condition
Rule 7     conditions -> condition AND conditions
Rule 8     condition -> IDENTIFIER = STRING
Rule 9     insert_query -> INSERT INTO IDENTIFIER ( IDENTIFIER ) VALUES ( values )
Rule 10    values -> STRING
Rule 11    values -> STRING , values
Rule 12    update_query -> UPDATE IDENTIFIER SET set_values WHERE conditions
Rule 13    set_values -> IDENTIFIER = STRING
Rule 14    set_values -> IDENTIFIER = STRING , set_values
Rule 15    delete_query -> DELETE FROM IDENTIFIER WHERE conditions

Terminals, with rules where they appear

(                    : 9 9
)                    : 9 9
*                    : 5
,                    : 11 14
=                    : 8 13 14
AND                  : 7
DELETE               : 15
FROM                 : 5 15
IDENTIFIER           : 5 8 9 9 12 13 14 15
INSERT               : 9
INTO                 : 9
SELECT               : 5
SET                  : 12
STRING               : 8 10 11 13 14
UPDATE               : 12
VALUES               : 9
WHERE                : 5 12 15
error                : 

Nonterminals, with rules where they appear

condition            : 6 7
conditions           : 5 7 12 15
delete_query         : 4
insert_query         : 2
query                : 0
select_query         : 1
set_values           : 12 14
update_query         : 3
values               : 9 11

Parsing method: LALR

state 0

    (0) S' -> . query
    (1) query -> . select_query
    (2) query -> . insert_query
    (3) query -> . update_query
    (4) query -> . delete_query
    (5) select_query -> . SELECT * FROM IDENTIFIER WHERE conditions
    (9) insert_query -> . INSERT INTO IDENTIFIER ( IDENTIFIER ) VALUES ( values )
    (12) update_query -> . UPDATE IDENTIFIER SET set_values WHERE conditions
    (15) delete_query -> . DELETE FROM IDENTIFIER WHERE conditions

    SELECT          shift and go to state 6
    INSERT          shift and go to state 7
    UPDATE          shift and go to state 8
    DELETE          shift and go to state 9

    query                          shift and go to state 1
    select_query                   shift and go to state 2
    insert_query                   shift and go to state 3
    update_query                   shift and go to state 4
    delete_query                   shift and go to state 5

state 1

    (0) S' -> query .



state 2

    (1) query -> select_query .

    $end            reduce using rule 1 (query -> select_query .)


state 3

    (2) query -> insert_query .

    $end            reduce using rule 2 (query -> insert_query .)


state 4

    (3) query -> update_query .

    $end            reduce using rule 3 (query -> update_query .)


state 5

    (4) query -> delete_query .

    $end            reduce using rule 4 (query -> delete_query .)


state 6

    (5) select_query -> SELECT . * FROM IDENTIFIER WHERE conditions

    *               shift and go to state 10


state 7

    (9) insert_query -> INSERT . INTO IDENTIFIER ( IDENTIFIER ) VALUES ( values )

    INTO            shift and go to state 11


state 8

    (12) update_query -> UPDATE . IDENTIFIER SET set_values WHERE conditions

    IDENTIFIER      shift and go to state 12


state 9

    (15) delete_query -> DELETE . FROM IDENTIFIER WHERE conditions

    FROM            shift and go to state 13


state 10

    (5) select_query -> SELECT * . FROM IDENTIFIER WHERE conditions

    FROM            shift and go to state 14


state 11

    (9) insert_query -> INSERT INTO . IDENTIFIER ( IDENTIFIER ) VALUES ( values )

    IDENTIFIER      shift and go to state 15


state 12

    (12) update_query -> UPDATE IDENTIFIER . SET set_values WHERE conditions

    SET             shift and go to state 16


state 13

    (15) delete_query -> DELETE FROM . IDENTIFIER WHERE conditions

    IDENTIFIER      shift and go to state 17


state 14

    (5) select_query -> SELECT * FROM . IDENTIFIER WHERE conditions

    IDENTIFIER      shift and go to state 18


state 15

    (9) insert_query -> INSERT INTO IDENTIFIER . ( IDENTIFIER ) VALUES ( values )

    (               shift and go to state 19


state 16

    (12) update_query -> UPDATE IDENTIFIER SET . set_values WHERE conditions
    (13) set_values -> . IDENTIFIER = STRING
    (14) set_values -> . IDENTIFIER = STRING , set_values

    IDENTIFIER      shift and go to state 20

    set_values                     shift and go to state 21

state 17

    (15) delete_query -> DELETE FROM IDENTIFIER . WHERE conditions

    WHERE           shift and go to state 22


state 18

    (5) select_query -> SELECT * FROM IDENTIFIER . WHERE conditions

    WHERE           shift and go to state 23


state 19

    (9) insert_query -> INSERT INTO IDENTIFIER ( . IDENTIFIER ) VALUES ( values )

    IDENTIFIER      shift and go to state 24


state 20

    (13) set_values -> IDENTIFIER . = STRING
    (14) set_values -> IDENTIFIER . = STRING , set_values

    =               shift and go to state 25


state 21

    (12) update_query -> UPDATE IDENTIFIER SET set_values . WHERE conditions

    WHERE           shift and go to state 26


state 22

    (15) delete_query -> DELETE FROM IDENTIFIER WHERE . conditions
    (6) conditions -> . condition
    (7) conditions -> . condition AND conditions
    (8) condition -> . IDENTIFIER = STRING

    IDENTIFIER      shift and go to state 27

    conditions                     shift and go to state 28
    condition                      shift and go to state 29

state 23

    (5) select_query -> SELECT * FROM IDENTIFIER WHERE . conditions
    (6) conditions -> . condition
    (7) conditions -> . condition AND conditions
    (8) condition -> . IDENTIFIER = STRING

    IDENTIFIER      shift and go to state 27

    conditions                     shift and go to state 30
    condition                      shift and go to state 29

state 24

    (9) insert_query -> INSERT INTO IDENTIFIER ( IDENTIFIER . ) VALUES ( values )

    )               shift and go to state 31


state 25

    (13) set_values -> IDENTIFIER = . STRING
    (14) set_values -> IDENTIFIER = . STRING , set_values

    STRING          shift and go to state 32


state 26

    (12) update_query -> UPDATE IDENTIFIER SET set_values WHERE . conditions
    (6) conditions -> . condition
    (7) conditions -> . condition AND conditions
    (8) condition -> . IDENTIFIER = STRING

    IDENTIFIER      shift and go to state 27

    conditions                     shift and go to state 33
    condition                      shift and go to state 29

state 27

    (8) condition -> IDENTIFIER . = STRING

    =               shift and go to state 34


state 28

    (15) delete_query -> DELETE FROM IDENTIFIER WHERE conditions .

    $end            reduce using rule 15 (delete_query -> DELETE FROM IDENTIFIER WHERE conditions .)


state 29

    (6) conditions -> condition .
    (7) conditions -> condition . AND conditions

    $end            reduce using rule 6 (conditions -> condition .)
    AND             shift and go to state 35


state 30

    (5) select_query -> SELECT * FROM IDENTIFIER WHERE conditions .

    $end            reduce using rule 5 (select_query -> SELECT * FROM IDENTIFIER WHERE conditions .)


state 31

    (9) insert_query -> INSERT INTO IDENTIFIER ( IDENTIFIER ) . VALUES ( values )

    VALUES          shift and go to state 36


state 32

    (13) set_values -> IDENTIFIER = STRING .
    (14) set_values -> IDENTIFIER = STRING . , set_values

    WHERE           reduce using rule 13 (set_values -> IDENTIFIER = STRING .)
    ,               shift and go to state 37


state 33

    (12) update_query -> UPDATE IDENTIFIER SET set_values WHERE conditions .

    $end            reduce using rule 12 (update_query -> UPDATE IDENTIFIER SET set_values WHERE conditions .)


state 34

    (8) condition -> IDENTIFIER = . STRING

    STRING          shift and go to state 38


state 35

    (7) conditions -> condition AND . conditions
    (6) conditions -> . condition
    (7) conditions -> . condition AND conditions
    (8) condition -> . IDENTIFIER = STRING

    IDENTIFIER      shift and go to state 27

    condition                      shift and go to state 29
    conditions                     shift and go to state 39

state 36

    (9) insert_query -> INSERT INTO IDENTIFIER ( IDENTIFIER ) VALUES . ( values )

    (               shift and go to state 40


state 37

    (14) set_values -> IDENTIFIER = STRING , . set_values
    (13) set_values -> . IDENTIFIER = STRING
    (14) set_values -> . IDENTIFIER = STRING , set_values

    IDENTIFIER      shift and go to state 20

    set_values                     shift and go to state 41

state 38

    (8) condition -> IDENTIFIER = STRING .

    AND             reduce using rule 8 (condition -> IDENTIFIER = STRING .)
    $end            reduce using rule 8 (condition -> IDENTIFIER = STRING .)


state 39

    (7) conditions -> condition AND conditions .

    $end            reduce using rule 7 (conditions -> condition AND conditions .)


state 40

    (9) insert_query -> INSERT INTO IDENTIFIER ( IDENTIFIER ) VALUES ( . values )
    (10) values -> . STRING
    (11) values -> . STRING , values

    STRING          shift and go to state 43

    values                         shift and go to state 42

state 41

    (14) set_values -> IDENTIFIER = STRING , set_values .

    WHERE           reduce using rule 14 (set_values -> IDENTIFIER = STRING , set_values .)


state 42

    (9) insert_query -> INSERT INTO IDENTIFIER ( IDENTIFIER ) VALUES ( values . )

    )               shift and go to state 44


state 43

    (10) values -> STRING .
    (11) values -> STRING . , values

    )               reduce using rule 10 (values -> STRING .)
    ,               shift and go to state 45


state 44

    (9) insert_query -> INSERT INTO IDENTIFIER ( IDENTIFIER ) VALUES ( values ) .

    $end            reduce using rule 9 (insert_query -> INSERT INTO IDENTIFIER ( IDENTIFIER ) VALUES ( values ) .)


state 45

    (11) values -> STRING , . values
    (10) values -> . STRING
    (11) values -> . STRING , values

    STRING          shift and go to state 43

    values                         shift and go to state 46

state 46

    (11) values -> STRING , values .

    )               reduce using rule 11 (values -> STRING , values .)

